--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       uri: mongodb+srv://nayonikaeyecare:b7yjInwQUxCCghBT@nayonikacluster.fqrcfog.mongodb.net/nayonikaDev
       database: nayonikaDev
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:local}
+    active: ${SPRING_PROFILES_ACTIVE:dev}
 server:
   port: 8081
 
@@ -16,6 +16,3 @@ jwt:
 auth:
   excluded:
     path: /auth,/v3/api-docs,/swagger-ui,/swagger-resources
-
-fast2sms:
-  apikey: ${FAST2SMS_API_KEY}
