--- a/api/src/main/resources/application-stg.yml
+++ b/api/src/main/resources/application-stg.yml
@@ -7,9 +7,9 @@ server:
   port: 8080
 logging:
   level:
-    root: DEBUG
+    root: INFO
     com:
-      nayonikaeyecare: DEBUG
+      nayonikaeyecare: INFO
 jwt:
   secret: ${JWT_SECRET}
   expiration: 3600
